// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportButton render with props 1`] = `
<Button
  className="export-csv"
  component="a"
  href="url"
  title="title info"
  variant="secondary"
>
  info
</Button>
`;

exports[`ExportButton render without props 1`] = `
<Button
  className="export-csv"
  component="a"
  href="/?format=csv"
  title="Export to CSV"
  variant="secondary"
>
  Export
</Button>
`;
